# lyolla

./: .gitignore  README.md  pyproject.toml
chatbot_app/: api.py  embeddings.py  urls.py  views.py
chatbot_app/agents/: base_agent.py  chat_agent.py  notice_crawler.py  notice_crawler_agent.py  vector_store_agent.py
chatbot_app/static/chatbot_app/: chat.js  style.css
chatbot_app/templates/chatbot_app/: chat.html
database/: detail_data.json  notices.json
django_project/: settings.py  urls.py
etc/nginx/sites-available/: chatbot.conf
